# AI-Client-Agent-MCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LLM.txt  README.md  blog_portfolio.md  delete_valencia_clients.py  docker-compose.yml  env.example  facturacion_mensual.py  linkedin_post.md  pyproject.toml  pytest.ini  requirements.txt  test_client_tools.py  test_delete_client.py  test_email.py  test_mcp_create_client.py
backend/: __init__.py  fastmcp_wrapper.py  mcp_instance.py  server.py
backend/api/tools/: client_tools.py
backend/api/v1/tools/: README.md  client_tools.py  invoice_tools.py  report_tools.py  tools_registry.py
backend/core/: README.md  config.py  database.py  decorators.py  init_managers.py  logging.py
backend/models/: README.md  client.py  client_note.py  invoice.py  manager.py  report.py
backend/repositories/: client_note_repository.py  client_repository.py
backend/services/: README.md  client_service.py  invoice_service.py  manager_service.py  report_service.py
cursor/: .mcp.json
database/: README.md  create_tables.sql  insert_clients_examples.sql  sample_data.sql
docs/: architecture.md  database_patterns.md  index.md  quickstart.md
tests/: README.md  conftest.py
tests/integration/: README.md  test_client_crud.py  test_client_notes.py  test_client_service.py  test_client_services.py  test_client_tools_api.py  test_invoice_services.py  test_invoice_tools_api.py
tests/unit/: README.md  __init__.py  test_client_model.py  test_client_models.py  test_generate_report.py  test_invoice_models.py  test_manager_service.py  test_tools_logic.py
